# StructuralInspectionPlanner

./: README.md
koptplanner/: CMakeLists.txt  bigBenParam.yaml  hoaHakanaiaParam.yaml  koptParam.yaml  package.xml  solarPlantParam.yaml
koptplanner/doc/: FoV.eps  boundingBox.eps  distIncidence.eps  fSpeed.eps  rSpeed.eps
koptplanner/include/LKH-2.0.7/: README  pr2392.par  pr2392.tsp
koptplanner/include/LKH-2.0.7/SRC/: Activate.c  AddExtraCandidates.c  AdjustCandidateSet.c  Ascent.c  Best2OptMove.c  Best3OptMove.c  Best4OptMove.c  Best5OptMove.c  BestKOptMove.c  C.c  ChooseInitialTour.c  Connect.c  CreateCandidateSet.c  CreateDelaunayCandidateSet.c  CreateQuadrantCandidateSet.c  Delaunay.c  Distance.c  Distance_SPECIAL.c  ERXT.c  FindTour.c  Gain23.c  Genetic.c  GreedyTour.c  Heap.c  IsCandidate.c  IsPossibleCandidate.c  KSwapKick.c  LKHmain.c  LinKernighan.c  Makefile  MergeBetterTourWithBestTour.c  MergeWithTour.c  Minimum1TreeCost.c  MinimumSpanningTree.c  NormalizeNodeList.c  OrderCandidateSet.c  PatchCycles.c  PrintParameters.c  ReadParameters.c  ReadParametersInsp.c  (+22 more)
koptplanner/include/LKH-2.0.7/SRC/INCLUDE/: LKH.h
koptplanner/include/koptplanner/: FixedWing.h  FixedWing.hpp  Rotorcraft.h  Rotorcraft.hpp  TriangleObject.h  TriangleObject.hpp  plan.hpp  ptpPlanner.hpp
koptplanner/include/planner_rrts/: kdtree.c  rrts.h  rrts.hpp  system_holonomic.h  system_holonomic.hpp
koptplanner/launch/: bigBen.launch  hoaHakanaia.launch  kopt.launch  solarPlant.launch
koptplanner/lookupTable/: lookupTable10x10.txt  lookupTable50x50.txt
koptplanner/src/: FixedWing.cpp  Rotorcraft.cpp  plan.cpp  ptpPlanner.cpp  system_holonomic.cpp
koptplanner/srv/: inspection.srv
optec/: AUTHORS  AUTHORS.txt  CMakeLists.txt  INSTALL  INSTALL.txt  Makefile  VERSIONS  VERSIONS.txt  make.mk  make_cygwin.mk  make_linux.mk  make_osx.mk  make_windows.mk  package.xml  package.xml~
optec/doc/: Makefile  doxygen.config  mainpage.dox
optec/examples/: Makefile  example1.cpp  example1a.cpp  example1b.cpp  example2.cpp  example3.cpp  example3b.cpp  example4.cpp  example4CP.cpp  example5.cpp  exampleLP.cpp  qrecipe.cpp
optec/include/optec/: Bounds.hpp  Bounds.ipp  Constants.hpp  ConstraintProduct.hpp  Constraints.hpp  Constraints.ipp  Flipper.hpp  Indexlist.hpp  Indexlist.ipp  Matrices.hpp  MessageHandling.hpp  MessageHandling.ipp  Options.hpp  QProblem.hpp  QProblem.ipp  QProblemB.hpp  QProblemB.ipp  SQProblem.hpp  SQProblem.ipp  SubjectTo.hpp  SubjectTo.ipp  Types.hpp  UnitTesting.hpp  Utils.hpp  Utils.ipp  qpOASES.hpp
optec/include/optec/extras/: OQPinterface.hpp  SolutionAnalysis.hpp  SolutionAnalysis.ipp
optec/interfaces/CUTEst/: Makefile  qpoasesCutest.cpp
optec/interfaces/matlab/: Makefile  make.m  qpOASES.cpp  qpOASES_matlab_utils.cpp  qpOASES_options.m  qpOASES_sequence.cpp  qpOASES_sequence.m
optec/interfaces/matlab/CUTEr/: comparison_cuter.m  cplexlink122.c  cuter_init_problem.m  cuter_performance_graph.m  cuter_problems.m  load_cuter.m  qpresidual.m  readme.txt  test_QAP8.m  test_cuter.m  test_ncvx.m
optec/interfaces/octave/: make.m  qpOASES.cpp  qpOASES.m  qpOASES_octave_utils.cpp  qpOASES_sequence.cpp
optec/interfaces/python/: qpoases.pxd  qpoases.pyx  setup.py
optec/interfaces/python/tests/: test_examples.py  test_idhessian.py  test_testbench.py
optec/interfaces/scilab/: Makefile  qpOASESinterface.c  qpOASESinterface.sce  qpOASESroutines.cpp
optec/interfaces/simulink/: load_example_QProblem.m  load_example_QProblemB.m  load_example_SQProblem.m  make.m  qpOASES_QProblem.cpp  qpOASES_QProblemB.cpp  qpOASES_SQProblem.cpp
optec/src/: BLASReplacement.cpp  Bounds.cpp  Constraints.cpp  Flipper.cpp  Indexlist.cpp  LAPACKReplacement.cpp  Makefile  Matrices.cpp  MessageHandling.cpp  OQPinterface.cpp  Options.cpp  QProblem.cpp  QProblemB.cpp  SQProblem.cpp  SolutionAnalysis.cpp  SubjectTo.cpp  Utils.cpp
request/: CMakeLists.txt  package.xml
request/meshes/: BigBen.stl  hoa_hakanaia.stl  solarPlant.stl
request/meshes/regularPlanes/: rPlane.stl
request/src/: bigBen.cpp  hoaHakanaia.cpp  requester.cpp  solarPlant.cpp
request/visualization/: inspectionPathVisualization.m
utils/: Readme.md
utils/ExportToDJI/: SIP2DJI.py
utils/ExportToPX4/: ExampleKML.kml  ExamplePath.csv~  KML2PX4.py  Mission_PX4.txt  SIP2PX4.py
utils/ExportToRotorS/: ExamplePath.csv  SIP2RotorS.py
utils/PathToTrajectory/: PATH2TRAJ.py
utils/Tools/: Readme.md
utils/Tools/Airplane2p5D/: Airplane2p5D.py  PlotAirplaneSolution.m
utils/Tools/LKH_Python_Interface/: InvokeLKH.py
utils/Tools/LKH_Python_Interface/TSPLIB/: test.par  test.tsp  test.txt
