<?xml version="1.0"?>
<package>
  <name>koptplanner</name>
  <version>1.0.0</version>
  <description>The koptplanner package</description>

  <maintainer email="andreas.bircher@mavt.ethz.ch">andreasbircher</maintainer>
  
  <license>Distributed for research use</license>

  <url type="website">https://github.com/ethz-asl/StructuralInspectionPlanner</url>

  <author email="andreas.bircher@mavt.ethz.ch">andreasbircher</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>optec</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>optec</run_depend>
  
  <export>
  </export>
</package>
