<?xml version="1.0"?>
<package>
  <name>optec</name>
  <version>1.0.0</version>
  <description>The optec package</description>

  <maintainer email="andreas.bircher@mavt.ethz.ch">andreasbircher</maintainer>

  <license>GPLLv2.1</license>

  <url type="website">https://github.com/ethz-asl/StructuralInspectionPlanner</url>

  <author email="andreas.bircher@mavt.ethz.ch">andreasbircher</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
