<?xml version="1.0"?>
<package>
  <name>request</name>
  <version>1.0.0</version>
  <description>The request package</description>

  <maintainer email="andreas.bircher@mavt.ch">andreasbircher</maintainer>

  <license>Distributed for research use</license>

  <url type="website">https://github.com/ethz-asl/StructuralInspectionPlanner</url>

  <author email="andreas.bircher@mavt.ethz.ch">andreasbircher</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>koptplanner</build_depend>
  <build_depend>roslib</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>koptplanner</run_depend>
  <run_depend>roslib</run_depend>

  <export>
  </export>
</package>
